# streaming

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: GUIA_IMPLEMENTACAO_LIVECAPTIONBRIDGE.md
docs/lab/: capture_loopback.py  capture_test.py  gen_segment.py  measure_drift.py  measure_stt.py  ollama_test.py
infra/llm/: compose.yaml
src/PyStreamingTool/: main.py
src/PyStreamingTool/UI/: local_server.py  ui.py
src/PyStreamingTool/api/: api.py
src/PyStreamingTool/llm/: core.py
src/StreamingProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/live_caption_bridge/: __init__.py  __main__.py  main.py
src/live_caption_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/live_caption_bridge/adapters/: ffmpeg_recorder.py  llm_translation.py  pyaudio_audio.py  sqlite_repository.py  whisper_stt.py  windows_hotkeys.py
src/live_caption_bridge/domain/: models.py
src/live_caption_bridge/infrastructure/: lifecycle.py  settings.py
src/live_caption_bridge/ports/: audio.py  caption_sink.py  recorder.py  speech.py  (+1 more)
src/tests/: test_llm.py  test_ui.py
tests/: fakes.py  test_audio_level.py  test_audio_port.py  test_audio_worker.py  test_audio_worker_stop.py  test_audio_workers.py  test_caption_sink.py  test_lifecycle.py  test_loopback_enumeration.py  test_main.py  test_pipeline.py  test_replay_window.py  test_resource_governor.py  test_settings.py  test_speech.py  test_translation.py  test_vad.py
tests/e2e/: test_hotkeys.py
tests/integration/: test_failure_recovery.py  test_llm_translation.py  test_overlay.py  test_replay_service.py  test_sqlite_repository.py
tests/unit/: fakes.py  test_caption_sink.py  test_main.py  test_models.py
(+10 files in other folders)
