[project]
    name = "StreamingProject"
    version = "0.1.0"
    description = "Streaming project to help on translation"
    readme = "README.md"
    requires-python = ">=3.14"
dependencies = [
    "httpx2>=2.9.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
    dev = [
    "fastapi>=0.139.2",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
    testpaths = ["src/tests"]

[tool.setuptools.package-dir]
   ""= "src"
