[project]
    name = "StreamingProject"
    version = "0.1.0"
    description = "Streaming project to help on translation"
    readme = "README.md"
    requires-python = ">=3.14"
dependencies = [
    "httpx2>=2.9.0",
    "keyboard>=0.13.5",
    "ollama>=0.6.2",
    "pyside6>=6.11.1",
]

[dependency-groups]
    dev = [
    "fastapi>=0.139.2",
    "pytest>=8.0",
    "pytest-qt>=4.5.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
    testpaths = ["src/tests"]

[tool.setuptools.package-dir]
   ""= "src"
